# nationalarchives.da-caselaw-document-processing

document_cleanser_lambda/: Dockerfile  pyproject.toml
