[tool.poetry]
name = "lambda-strip-docx"
version = "1.1.0"
description = "AWS Lambda function for cleaning DOCX and PDF documents"
authors = ["The National Archives <digitalrecords@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "document_cleanser_lambda", from = "."}]

[tool.poetry.dependencies]
python = "3.14.4"
lxml = "6.1.0"
rollbar = "1.3.0"
boto3 = "1.42.92"
pdf2image = "1.17.0"
Pillow = "12.2.0"
filetype = "1.2.0"
python-dotenv = "1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
moto = {extras = ["s3"], version = "5.1.22"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev]
optional = true


[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040"] # long lines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias
extend-select = ["W", "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA",
                 "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "PTH",
                 "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
unfixable = ["ERA"]

# things skipped:
# N: naming, possibly good
# D: docstrings missing throughout
# ANN: annotations missing throughout
# FBT: not convinced boolean trap worth auto-banning.
# CPY: copyright at top of each file
# G: logging warnings -- fstrings bad?
# ARG: sometimes you need to accept arguments.
# TD: somewhat finicky details about formatting TODOs
# FIX: flags todos: possible to add -- skipped for now
# ERA: lots of false positives, not a good autofix
# PD, NPY, AIR: ignored, panda / numpy / airflow specific
# FURB: not yet out of preview

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*" = ["S101"] # tests allowed assert
"clean_*.py" = ["S603"] # subprocess untrusted input false alarms
